--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ dependencies = [
     "pydub>=0.25.1",
     "openai-whisper>=20231117",
     "pyannote.audio>=3.1.0",
+    "jupyter>=1.0.0",
+    "ipykernel>=6.0.0",
+    "matplotlib>=3.0.0",
+    "seaborn>=0.11.0",
 ]
 
 
